IOMS-1023: Implemented the GenericService and GenericSpecification and so add category catalog
